# ros2_ws

Notes/: Level_03_ROS2_Course_Note  Navigation2_Docomentation  Object_detection_notes  Python_Code_Stucture_For_ROS 2  ROS 2 package structure  Real_life navigation command  Ros2_Commads_for_urdf  Ros2_Commands_Notes  Ros2_and_esp32_interface_command  Ros2_commands_gazebo  command_line_structure_Notes
scr/AV_car/: package.xml  setup.cfg  setup.py
scr/AV_car/config/: view_bot.rviz
scr/AV_car/design/: common_properties.xacro  lidar.xacro
scr/AV_car/launch/: rp.launch.py  rp.launch.xml  sim.launch.py  sim.launch.xml
scr/action_package/: package.xml  setup.py
scr/action_package/action_package/: count_until_cli.py  count_until_server.py  even_odd_action_cli.py  even_odd_action_srv.py  server_node.py
scr/catch_multiple_turtlesim_project/catch_multiple_turtle/: package.xml  setup.cfg  setup.py
scr/config_package/: CMakeLists.txt  package.xml
scr/esp32_cheak/: CMakeLists.txt  package.xml
scr/esp32_cheak/src/: node_2.cpp  node_3.cpp
scr/launch_package/: CMakeLists.txt  package.xml
scr/launch_package/launch/: demo.launch.py  demo.launch.xml  turtle.launch.xml
scr/level_3_action_challange/: package.xml  setup.cfg  setup.py
scr/level_3_action_challange/level_3_action_challange/: client_node.py  pub_node.py  server_node.py
scr/lifecycle_py/: package.xml  setup.py
scr/lifecycle_py/lifecycle_py/: num_pub.py
scr/my_custom_interfaces/: CMakeLists.txt  package.xml
scr/my_custom_interfaces/action/: CarPosition.action  UntilCount.action
scr/my_custom_interfaces/msg/: TargetCoordinate.msg
scr/my_custom_interfaces/srv/: EvenOdd.srv
scr/my_package/: package.xml  setup.py
scr/my_package/my_package/: cheak_custom_serivce_pub.py  cheak_custom_serivce_subs.py  drew_circle.py  my_node.py  my_robot_controll.py  pose_subscriber.py
scr/my_robot_descirption/: CMakeLists.txt  package.xml
scr/my_robot_descirption/config/: gazebo_bridge.yaml  urdf_config.rviz
scr/my_robot_descirption/launch/: display.launch.py  display.launch.xml  gazebo_11_10_2.xml  my_robot_gazebo.launch.xml
scr/my_robot_descirption/urdf/: camera_sensor.xacro  common_properties.xacro  gazebo_plugin.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  (+1 more)
scr/sam_drone/: package.xml  setup.cfg  setup.py
scr/service_client_package/: package.xml  setup.cfg  setup.py
scr/small_bot/: CMakeLists.txt  package.xml
scr/stm_32_car_control/: package.xml  setup.cfg  setup.py
src/my_bot/: CMakeLists.txt  package.xml
(+32 files in other folders)
